--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ canonifyurls    = true
   twitterName = ""
   fbName = ""
   githubName = "zief0002"
-  linkedinName = "zief0002"
+  linkedinName = "andrewzieffler"
   mediumName = ""
 
   logo = "img/zieffler-logo.png"
