--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl         = "https://priceless-wiles-535968.netlify.com/"
+baseurl         = "http://www.datadreaming.org/"
 theme = "hugo-casper-two"
 languageCode    = "en-US"
 disqusShortname = ""
