--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ title = "Andrew Zieffler"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
-copyright = "&copy; 2018"
+copyright = "This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License."
 
 theme = "hugo-academic"
 enableEmoji = true
@@ -32,6 +32,7 @@ defaultContentLanguageInSubdir = false
 [outputs]
   home = [ "HTML", "CSS", "RSS" ]
   section = [ "HTML", "RSS" ]
+  taxonomyterm = [ "HTML", "RSS" ]
 
 # Configure BlackFriday Markdown rendering.
 #   See: https://gohugo.io/readfiles/bfconfig/
