updated rss feeds

--- a/config.toml
+++ b/config.toml
@@ -32,6 +32,7 @@ defaultContentLanguageInSubdir = false
 [outputs]
   home = [ "HTML", "CSS", "RSS" ]
   section = [ "HTML", "RSS" ]
+  taxonomy = [ "HTML", "RSS" ]
   taxonomyTerm = [ "HTML", "RSS" ]
 
 # Configure BlackFriday Markdown rendering.
