--- a/config.toml
+++ b/config.toml
@@ -178,7 +178,7 @@ defaultContentLanguageInSubdir = false
   # Configuration of talk pages.
   [params.talks]
     # Show talk time?
-    time = true
+    time = false
 
   # Configuration of publication pages.
   [params.publications]
@@ -256,35 +256,43 @@ defaultContentLanguageInSubdir = false
   weight = 2
 
 [[menu.main]]
+  name = "Talks"
+  url = "#talks"
+  weight = 3
+
+[[menu.main]]
   name = "Posts"
   url = "#posts"
-  weight = 3
+  weight = 4
 
 [[menu.main]]
   name = "Projects"
   url = "#projects"
-  weight = 4
+  weight = 5
 
 [[menu.main]]
   name = "Teaching"
   url = "#teaching"
-  weight = 5
+  weight = 6
 
 [[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 6
+  weight = 7
 
+[[menu.main]]
+  name = "Blogroll"
+  url = "#blogroll"
+  weight = 8
+  
+  
 # Taxonomies.
 [taxonomies]
   tag = "tags"
   category = "categories"
   publication_type = "publication_types"
 
-[[menu.main]]
-  name = "Blogroll"
-  url = "#blogroll"
-  weight = 7
+
 
 # Languages
 #   Create a [languages.X] block for each language you want, where X is the language ID.
